sql/src/test/BugTracker/Tests/cardinality_violation.SF-1240701.stable.err.Algebra
stderr of test 'cardinality_violation.SF-1240701` in directory 'src/test/BugTracker` itself:


# 23:24:25 >  
# 23:24:25 >  Mtimeout -timeout 180 Mserver "--config=/ufs/niels/scratch/Linux-x86_64/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/niels/scratch/Linux-x86_64/lib/MonetDB:/ufs/niels/scratch/Linux-x86_64/lib/bin" --set "gdk_dbfarm=/ufs/niels/scratch/Linux-x86_64/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/niels/scratch/Linux-x86_64/var/MonetDB/log" --set mapi_port=30825 --set sql_port=45948 --set xquery_port=55139 --set monet_prompt= --trace "--dbname=mTests_src_test_BugTracker" --dbinit="module(sql_server); sql_server_start();" ; echo ; echo Over..
# 23:24:25 >  


# 23:24:25 >  
# 23:24:25 >  Mtimeout -timeout 60 MapiClient -lsql -u monetdb -P monetdb --host=localhost --port=45948  < cardinality_violation.SF-1240701.sql
# 23:24:25 >  

MAPI  = monetdb@koala:30023
QUERY = select * from env() as env where name = ( select 'prefix' from env() as env );
ERROR = !ERROR: zero_or_one: cardinality violation (45>1)
        !ERROR: zero_or_one: operation failed.
MAPI  = monetdb@koala:30023
QUERY = select * from columns where name = (select columns.name from _tables, columns where _tables.id = columns.table_id);
ERROR = !ERROR: zero_or_one: cardinality violation (171>1)
        !ERROR: zero_or_one: operation failed.

# 23:24:25 >  
# 23:24:25 >  Done.
# 23:24:25 >  

